# research-crawler-flatagents

./: .gitignore  DESIGN.md  EXAMPLE_INFO.md  HANDOFF_2026_BACKFILL.md  MYMETHOD.md  PLAN_PIPELINE_REESTABLISH.md  README.md  RESEARCH_ANALYZER_AGENT_HUMANLOOP.md  RESEARCH_SEARCH_PLAN.md  REVERSE_CITATION_ENRICHMENT_PLAN.md  TASKS.md  TODO.md  relevance_scoring.yml  relevance_scoring.yml_old  relevance_scoring_2023.yml  relevance_scoring_2024.yml  relevance_scoring_2026.yml
arxiv_crawler/: README.md  backfill_2023.sh  backfill_2024.sh  backfill_2025_2026.sh  fmr_2023_migration.sql  fmr_2024_migration.sql  pyproject.toml  run.sh  scaling_events_migration.sql  schema.sql  worker_registry_migration.sql
arxiv_crawler/config/: machine.yml
discovery_pipeline/: README.md  pyproject.toml  run.sh
discovery_pipeline/config/: machine.yml  reporter.yml
discovery_pipeline/reports/: discovery_report_2026-01-05_1226.md
relevance_scoring/: README.md  pyproject.toml  run.sh  schema.sql
relevance_scoring/config/: machine.yml
relevance_scoring_2024/: .gitignore  README.md  pyproject.toml  run.sh  schema.sql  score_2023.sh
relevance_scoring_2024/config/: machine.yml
research_paper_analysis/: pyproject.toml  run.sh
research_paper_analysis/config/: abstract_analyzer.yml  abstract_fixer.yml  analyzer_machine.yml  critic.yml  critique_fixer.yml  formatter.yml  machine.yml  paper_analysis_worker.yml  parallelization_checker.yml  profiles.yml  refiner_machine.yml  report_fixer.yml  section_analyzer_extractor.yml  section_fixer.yml  stale_worker_reaper.yml  summarizer_humanloop.yml  summary_fixer.yml  synthesizer.yml
research_paper_analysis/js/: README.md  run.sh
research_paper_analysis/python/: README.md  TODO_outdated.md  backlog_bottom_6000.sh  check_active_jobs.sh  check_workers.sh  pyproject.toml  queue_top_8000.sh  run.sh  run_auto_search.sh  run_checker.py  run_opencode.sh  run_opencode_daemon.sh  run_pending_workers.sh  run_reaper.py  run_search_repl.sh  run_summarizer_repl.sh  run_worker.py  unpoison_all.sh  unpoison_recent_with_files.sh  update_top_8000_pending.sh
research_paper_analysis_v2/: .gitignore  2023_ARXIV_FILTER_SPEC_DRAFT.md  2023_scrape_kaggle.md  2024_ARXIV_FILTER_SPEC.md  2025_ARXIV_FILTER_METHOD.md  HANDOFF_MODEL_EVAL.md  MODEL_SELECTION_QWEN35_VOLUME.md  OPENROUTER_FREE_WORKERS.md  PLAN.md  README.md  STORY.md  TODO.md  build_word_clouds.sh  build_word_clouds_2023_organic_semantic.sh  build_word_clouds_2024.sh  build_word_clouds_organic_semantic.sh  cleanup_word_clouds_2023_organic_semantic.sh  cleanup_word_clouds_2026_organic_semantic.sh  cleanup_word_list.py  eval_model_comparison_prompt.md  free_unlimited.txt  generate_word_list_2024.py  generate_word_list_organic_semantic.py  handoff.md  pdf_stream_to_txt.py  pdf_text_extractor.py  phase_buffer_counts.sh  pyproject.toml  quality_sentinel.py  queue_top_per_word_cloud.sh  run.py  run.sh  run_batch.py  run_batch.sh  run_quality_sentinel.sh  run_search_repl.sh  run_single_worker.py  run_single_worker.sh  run_summarizer_repl.sh  split_word_clouds_2024.py  (+4 more)
research_paper_analysis_v2/.tickets/: rpav-bhl7.md  rpav-cczj.md  rpav-h362.md  rpav-uj2i.md  rpav-v7d7.md  rpav-xf37.md  rpav-xqjp.md
research_paper_analysis_v2/config/: README.md  analysis_machine.yml  batch_scheduler.yml  completeness_judge.yml  expensive_machine.yml  expensive_machine_sequential_llamacpp_backup.yml  key_outcome_writer.yml  limits_confidence_writer.yml  machine.yml  open_questions_machine.yml  open_questions_writer.yml  paper_analysis_worker.yml  prep_machine.yml  profiles.yml  profiles_deepseek_v4_flash_backup.yml  profiles_gemma_4_26b_a4b_it_free_backup.yml  profiles_gpt55_codex_oauth_high_backup.yml  profiles_hybrid_backup.yml  profiles_llamacpp_backup.yml  profiles_owl_alpha_backup.yml  profiles_qwen35b_endpoint_backup.yml  profiles_stepfun_test.yml  report_assembler.yml  reproduction_machine.yml  reproduction_writer.yml  single_worker_launcher.yml  targeted_repair.yml  terminology_map.yml  why_hypothesis_machine.yml  why_hypothesis_writer.yml  wrap_machine.yml
research_paper_analysis_v2/data/: model_comparison_results.md  v2_executions.sqlite
research_paper_analysis_v2/deepseek-v4-flash-openrouter/: 2601.02105_lion-dg-layer-informed-initialization-with-deep-gradient-protocols-for-accelerated-neural-network-training_20260508_215332.md  2601.08181_tabpfn-through-the-looking-glass-an-interpretability-study-of-tabpfn-and-its-internal-representations_20260508_231122.md  2601.17472_adversarial-alignment-and-disentanglement-for-cross-domain-ctr-prediction-with-domain-encompassing-features_20260508_231255.md  2601.22397_sair-cost-efficient-multi-stage-ml-pipeline-autoscaling-via-in-context-reinforcement-learning_20260508_231047.md  2602.05670_hyperpotter-spell-the-charm-of-high-order-interactions-in-audio-deepfake-detection_20260508_231312.md  2602.09972_hydra-nav-object-navigation-via-adaptive-dual-process-reasoning_20260508_231239.md  2602.14404_boule-or-baguette-a-study-on-task-topology-length-generalization-and-the-benefit-of-reasoning-traces_20260508_231308.md  2603.17189_influence-of-gripper-design-on-human-demonstration-quality-for-robot-learning_20260508_231308.md  2603.28644_constructing-composite-features-for-interpretable-music-tagging_20260508_231035.md
research_paper_analysis_v2/docs/: 2024_2025_selected_totals_histogram.csv  2024_BULK.md  2024_TRANCHE_TOTALS_AND_2025_COMPARISON.md  2024_fmr_histogram_all_vs_selected_0p05.csv  429_PLAN.MD  CONCURRENCY_REFACTOR_LIST.md  CONTINUOUS_SCHEDULER.md  PLAN_FIX_CONCURRENCY_BLOCKING.md  SDK_RUNTIME_RELOAD_AND_DISTRIBUTED_WORKERS.md  pipeline_diagram.md  qwen10_file_pairs_and_qa.md
research_paper_analysis_v2/queries/: enqueue_2023_all_tranches_pending.sql  (+5 more)
research_paper_analysis_v3/: .env.local.example  .gitignore  SESSION_SUMMARY.md  analyze_tps.py  constraints.txt  dry_run_fanout.py  dry_run_full.py  dry_run_warmup.py  pyproject.toml  run_papers.py  {{ input.db_path }}
reverse_citation_enrichment/: .gitignore  README.md  pyproject.toml  run.sh  schema.sql
(+296 files in other folders)
