[project]
name = "arxiv_crawler"
version = "0.1.0"
description = "FlatMachine arXiv crawler for LLM research"
dependencies = ["flatagents[litellm]>=0.8.1", "httpx"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
arxiv-crawler = "arxiv_crawler.main:main"
arxiv-backfill = "arxiv_crawler.backfill:main"
