[project]
name = "relevance_scoring"
version = "0.1.0"
description = "Local-embedding FMR scoring for the research crawler"
dependencies = ["flatagents[litellm]", "sentence-transformers"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
relevance-scoring = "relevance_scoring.main:main"
