[project]
name = "research_paper_analysis"
version = "0.1.0"
description = "Hierarchical paper analysis with checkpoint/resume for FlatAgents"
dependencies = ["flatagents[litellm]>=0.8.1", "pypdf", "httpx"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
research-paper-demo = "research_paper_analysis.main:main"
