[project]
name = "research_paper_analysis_v2"
version = "0.1.0"
description = "Simplified v2 paper analysis pipeline with terminology tagging"
dependencies = [
    "flatagents[litellm,metrics]>=1.1.1",
    "flatmachines[flatagents,metrics]>=1.1.1",
    "pyyaml",
    "httpx",
    "pypdf",
]
requires-python = ">=3.10"

[project.scripts]
research-paper-v2 = "research_paper_analysis_v2.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/research_paper_analysis_v2"]

# uncomment to run locally
#[tool.uv.sources]
#flatagents = { path = "../../flatagents/sdk/python/flatagents", editable = true }
#flatmachines = { path = "../../flatagents/sdk/python/flatmachines", editable = true }
