[project]
name = "reverse_citation_enrichment"
version = "0.1.0"
description = "OpenAlex reverse-citation enrichment for the research crawler"
dependencies = ["flatagents[litellm]>=0.8.1", "httpx"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
reverse-citation-enrichment = "reverse_citation_enrichment.main:main"
