[project]
name = "research_paper_analysis"
version = "0.1.0"
description = "Paper analysis with machine peering and checkpoint/resume for FlatAgents"
dependencies = [
    "flatagents[litellm,metrics]",
    "flatmachines[flatagents,metrics]",
    "pypdf",
    "httpx",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
research-paper-demo = "research_paper_analysis.main:main"

# Local development: uncomment to use local flatagents/flatmachines checkouts.
# Comment out (or remove) to install from PyPI instead.
[tool.uv.sources]
flatagents = { path = "../../../flatagents/sdk/python/flatagents", editable = true }
flatmachines = { path = "../../../flatagents/sdk/python/flatmachines", editable = true }
